<resources>
    <string name="app_name">CheckB</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="lendo_text">Lendo</string>
    <string name="lista_desejo_text">Lista de Desejos</string>
    <string name="emprestado_text">Emprestado</string>
    <string name="comprei_text">Comprei e Não Li</string>
    <string name="anotacoes_text">Anotações</string>
    <string name="voucher_text">Voucher</string>
    <string name="sair_text">Sair</string>
    <string name="editar_text">Editar</string>
    <string name="conf_senha_text">Confirmar Senha</string>
    <string name="senha_text">Senha</string>
    <string name="email_text">E-mail</string>
</resources>
